# bcode

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  checkpoint.rs  main.rs  markdown.rs  ui.rs
src/app/: mod.rs  state.rs
src/config/: mod.rs
src/provider/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/session/: mod.rs
src/tools/: fs.rs  mod.rs  shell.rs
src/ui/: chat.rs  diff.rs  input.rs  mod.rs  permission.rs  sessions.rs  setup.rs  status_bar.rs  theme.rs
