[package]
name = "better-code"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bcode"
path = "src/main.rs"

[dependencies]
ratatui       = "0.29"
crossterm     = { version = "0.28", features = ["event-stream"] }
tokio         = { version = "1",    features = ["full"] }
futures-util  = "0.3"
serde         = { version = "1",    features = ["derive"] }
serde_json    = "1"
reqwest       = { version = "0.12", features = ["json", "stream"] }
anyhow        = "1"
clap          = { version = "4",    features = ["derive"] }
async-trait   = "0.1"
glob          = "0.3"
directories   = "5"
uuid          = { version = "1", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
